--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -105,6 +105,7 @@
    "id": "5c86dfd4-2c32-4dfa-9150-7a09b88aab4f",
    "metadata": {},
    "source": [
+    "<hr>\n",
     "PSAW (the Python PushShift API Wrapper) allows us to obtain historical posts, whereas PRAW does not have this functionality. PushShift is a third-party service that scrapes Reddit to provide \"enhanced functionality and search capabilities for searching Reddit comments and submissions.\" Their API is intended research purposes.\n",
     "\n",
     "PRAW (the Python Reddit API Wrapper) allows us to obtain the current \"score\" of a post, which is the total number of upvotes minus the total number of downvotes. Because PushShift scrapes posts only once (shortly after they are posted), the reported score is usually very low, as it is only accurate at the time they were scraped. Although PSAW lacks this functionality, it can be used in conjunction with PRAW, which solves this problem."
@@ -352,10 +353,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "e923464a-3c4d-4954-bfad-2835c2622f0a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished removing the posts that were either deleted or removed.\n"
+     ]
+    }
+   ],
    "source": [
     "#Delete the posts that were either deleted or removed\n",
     "deleted_keywords = [\"deleted\", \"removed\"]\n",
