--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "id": "93b5eb0c-4f96-41bf-9777-4333196138c3",
    "metadata": {},
    "outputs": [
@@ -66,33 +66,33 @@
       "Requirement already satisfied: torchvision in /home/zeyad/.local/lib/python3.8/site-packages (from -r requirements.txt (line 10)) (0.12.0+cu113)\n",
       "Requirement already satisfied: torchaudio in /home/zeyad/.local/lib/python3.8/site-packages (from -r requirements.txt (line 11)) (0.11.0+cu113)\n",
       "Requirement already satisfied: transformers in /home/zeyad/.local/lib/python3.8/site-packages (from -r requirements.txt (line 13)) (4.17.0)\n",
-      "Requirement already satisfied: packaging>=20.0 in /home/zeyad/.local/lib/python3.8/site-packages (from matplotlib->-r requirements.txt (line 1)) (21.0)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /home/zeyad/.local/lib/python3.8/site-packages (from matplotlib->-r requirements.txt (line 1)) (9.0.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /home/zeyad/.local/lib/python3.8/site-packages (from matplotlib->-r requirements.txt (line 1)) (4.29.1)\n",
-      "Requirement already satisfied: numpy>=1.17 in /home/zeyad/.local/lib/python3.8/site-packages (from matplotlib->-r requirements.txt (line 1)) (1.22.3)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/zeyad/.local/lib/python3.8/site-packages (from matplotlib->-r requirements.txt (line 1)) (0.11.0)\n",
       "Requirement already satisfied: pyparsing>=2.2.1 in /home/zeyad/.local/lib/python3.8/site-packages (from matplotlib->-r requirements.txt (line 1)) (2.4.7)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /home/zeyad/.local/lib/python3.8/site-packages (from matplotlib->-r requirements.txt (line 1)) (2.8.2)\n",
+      "Requirement already satisfied: numpy>=1.17 in /home/zeyad/.local/lib/python3.8/site-packages (from matplotlib->-r requirements.txt (line 1)) (1.22.3)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /home/zeyad/.local/lib/python3.8/site-packages (from matplotlib->-r requirements.txt (line 1)) (9.0.1)\n",
       "Requirement already satisfied: kiwisolver>=1.0.1 in /home/zeyad/.local/lib/python3.8/site-packages (from matplotlib->-r requirements.txt (line 1)) (1.3.2)\n",
-      "Requirement already satisfied: click in /home/zeyad/.local/lib/python3.8/site-packages (from nltk->-r requirements.txt (line 2)) (7.1.2)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /home/zeyad/.local/lib/python3.8/site-packages (from matplotlib->-r requirements.txt (line 1)) (4.29.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/zeyad/.local/lib/python3.8/site-packages (from matplotlib->-r requirements.txt (line 1)) (0.11.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /home/zeyad/.local/lib/python3.8/site-packages (from matplotlib->-r requirements.txt (line 1)) (2.8.2)\n",
+      "Requirement already satisfied: packaging>=20.0 in /home/zeyad/.local/lib/python3.8/site-packages (from matplotlib->-r requirements.txt (line 1)) (21.0)\n",
       "Requirement already satisfied: tqdm in /home/zeyad/.local/lib/python3.8/site-packages (from nltk->-r requirements.txt (line 2)) (4.62.2)\n",
       "Requirement already satisfied: regex in /home/zeyad/.local/lib/python3.8/site-packages (from nltk->-r requirements.txt (line 2)) (2021.8.28)\n",
+      "Requirement already satisfied: click in /home/zeyad/.local/lib/python3.8/site-packages (from nltk->-r requirements.txt (line 2)) (7.1.2)\n",
       "Requirement already satisfied: joblib in /home/zeyad/.local/lib/python3.8/site-packages (from nltk->-r requirements.txt (line 2)) (1.0.1)\n",
       "Requirement already satisfied: pytz>=2017.3 in /home/zeyad/.local/lib/python3.8/site-packages (from pandas->-r requirements.txt (line 3)) (2021.3)\n",
-      "Requirement already satisfied: websocket-client>=0.54.0 in /home/zeyad/.local/lib/python3.8/site-packages (from praw->-r requirements.txt (line 4)) (1.3.2)\n",
       "Requirement already satisfied: prawcore<3,>=2.1 in /home/zeyad/.local/lib/python3.8/site-packages (from praw->-r requirements.txt (line 4)) (2.3.0)\n",
       "Requirement already satisfied: update-checker>=0.18 in /home/zeyad/.local/lib/python3.8/site-packages (from praw->-r requirements.txt (line 4)) (0.18.0)\n",
+      "Requirement already satisfied: websocket-client>=0.54.0 in /home/zeyad/.local/lib/python3.8/site-packages (from praw->-r requirements.txt (line 4)) (1.3.2)\n",
       "Requirement already satisfied: requests in /home/zeyad/.local/lib/python3.8/site-packages (from psaw->-r requirements.txt (line 5)) (2.25.1)\n",
       "Requirement already satisfied: typing-extensions in /home/zeyad/.local/lib/python3.8/site-packages (from torch->-r requirements.txt (line 9)) (4.1.1)\n",
+      "Requirement already satisfied: tokenizers!=0.11.3,>=0.11.1 in /home/zeyad/.local/lib/python3.8/site-packages (from transformers->-r requirements.txt (line 13)) (0.11.6)\n",
+      "Requirement already satisfied: sacremoses in /home/zeyad/.local/lib/python3.8/site-packages (from transformers->-r requirements.txt (line 13)) (0.0.49)\n",
       "Requirement already satisfied: pyyaml>=5.1 in /usr/lib/python3/dist-packages (from transformers->-r requirements.txt (line 13)) (5.3.1)\n",
       "Requirement already satisfied: huggingface-hub<1.0,>=0.1.0 in /home/zeyad/.local/lib/python3.8/site-packages (from transformers->-r requirements.txt (line 13)) (0.4.0)\n",
       "Requirement already satisfied: filelock in /home/zeyad/.local/lib/python3.8/site-packages (from transformers->-r requirements.txt (line 13)) (3.0.12)\n",
-      "Requirement already satisfied: sacremoses in /home/zeyad/.local/lib/python3.8/site-packages (from transformers->-r requirements.txt (line 13)) (0.0.49)\n",
-      "Requirement already satisfied: tokenizers!=0.11.3,>=0.11.1 in /home/zeyad/.local/lib/python3.8/site-packages (from transformers->-r requirements.txt (line 13)) (0.11.6)\n",
       "Requirement already satisfied: six>=1.5 in /home/zeyad/.local/lib/python3.8/site-packages (from python-dateutil>=2.7->matplotlib->-r requirements.txt (line 1)) (1.15.0)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /home/zeyad/.local/lib/python3.8/site-packages (from requests->psaw->-r requirements.txt (line 5)) (1.26.9)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /home/zeyad/.local/lib/python3.8/site-packages (from requests->psaw->-r requirements.txt (line 5)) (2021.10.8)\n",
       "Requirement already satisfied: chardet<5,>=3.0.2 in /home/zeyad/.local/lib/python3.8/site-packages (from requests->psaw->-r requirements.txt (line 5)) (4.0.0)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /home/zeyad/.local/lib/python3.8/site-packages (from requests->psaw->-r requirements.txt (line 5)) (1.26.9)\n",
       "Requirement already satisfied: idna<3,>=2.5 in /home/zeyad/.local/lib/python3.8/site-packages (from requests->psaw->-r requirements.txt (line 5)) (2.10)\n"
      ]
     }
@@ -107,14 +107,15 @@
    "metadata": {},
    "source": [
     "<hr>\n",
-    "PSAW (the Python PushShift API Wrapper) allows us to obtain historical posts, whereas PRAW does not have this functionality. PushShift is a third-party service that scrapes Reddit to provide \"enhanced functionality and search capabilities for searching Reddit comments and submissions.\" Their API is intended research purposes.\n",
     "\n",
-    "PRAW (the Python Reddit API Wrapper) allows us to obtain the current \"score\" of a post, which is the total number of upvotes minus the total number of downvotes. Because PushShift scrapes posts only once (shortly after they are posted), the reported score is usually very low, as it is only accurate at the time they were scraped. Although PSAW lacks this functionality, it can be used in conjunction with PRAW, which solves this problem."
+    "**PSAW (the Python PushShift API Wrapper)** allows us to obtain historical posts, whereas PRAW does not have this functionality. PushShift is a third-party service that scrapes Reddit to provide \"enhanced functionality and search capabilities for searching Reddit comments and submissions.\" Their API is intended research purposes.\n",
+    "\n",
+    "**PRAW (the Python Reddit API Wrapper)** allows us to obtain the current \"score\" of a post, which is the total number of upvotes minus the total number of downvotes. Because PushShift scrapes posts only once — shortly after they are posted — the reported score is only accurate at the time they were scraped. Although PSAW lacks this functionality, it can be used in conjunction with PRAW, which solves this problem."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "id": "ed42f5a5-a6dc-43da-b4cd-d8932f9fb910",
    "metadata": {},
    "outputs": [
@@ -176,7 +177,9 @@
    "id": "ea9cefcd-7371-4d3e-9fef-6926c289d857",
    "metadata": {},
    "source": [
-    "In order to use the Reddit API, one must apply to be granted access for use with their account. After agreeing with the ToS, one can apply [here](https://docs.google.com/forms/d/e/1FAIpQLSezNdDNK1-P8mspSbmtC2r86Ee9ZRbC66u929cG2GX0T9UMyw/viewform).\n",
+    "In order to use the Reddit API, an account must be granted access. After agreeing to follow the ToS, a Reddit user can apply [here](https://docs.google.com/forms/d/e/1FAIpQLSezNdDNK1-P8mspSbmtC2r86Ee9ZRbC66u929cG2GX0T9UMyw/viewform).\n",
+    "\n",
+    "\n",
     "Then, we can authenticate with PRAW with the credentials that we provide in the [client_secrets.json](client_secrets.jsonclient_secrets.jsonclient_secrets.json) file."
    ]
   },
@@ -216,7 +219,7 @@
    "id": "ea1ffc08-cf7a-45c7-b504-214a48d1a10d",
    "metadata": {},
    "source": [
-    "We define a list of the subreddits that we want to scrape, and initialize the appropriate time interval variables."
+    "We define a list of the subreddits that we want to scrape and initialize the appropriate time interval variables."
    ]
   },
   {
@@ -288,7 +291,7 @@
    "source": [
     "We want to be able to permanently store the data that we scrape for future analysis. \n",
     "\n",
-    "The scraping process can be lengthly due to rate limiting, and storing the data we get from the API in memory is bad practice when considering the likelihood of an unexpected crash. Therefore, for each subreddit, after each month of posts we scrape, we save the pandas dataframe to the disk (in the .csv file format)."
+    "The scraping process can be lengthly due to rate limiting, and storing the data we get from the API in memory is bad practice when considering the likelihood of a crash. Therefore, for each subreddit, after each month of posts we scrape, we save the pandas dataframe to the disk (in the .csv file format)."
    ]
   },
   {
@@ -349,7 +352,7 @@
    "id": "cf3fe399-f521-4c34-a30d-1fc3d532cd25",
    "metadata": {},
    "source": [
-    "## 1.4 Preprocessing Data and Downsampling"
+    "## 1.4 Data Preprocessing and Downsampling"
    ]
   },
   {
@@ -401,7 +404,7 @@
    "id": "a728ab5b-01b1-4978-bc94-542b90b397f7",
    "metadata": {},
    "source": [
-    "Now, we have our data stored via .csv files. We can load this in a pandas dataframe to look at the data collected over the course of one month for a subreddit."
+    "Now, we have our data stored via .csv files. We can then load this in a pandas dataframe to look at the data collected over the course of one month for a subreddit."
    ]
   },
   {
@@ -731,51 +734,148 @@
    "id": "725bffee-aea6-405f-82bc-d1c0f0e3bbdd",
    "metadata": {},
    "source": [
-    "Transformer models, such as GPT-3 and BERT, have revolutionalized today's NLP landscape. They have built upon the original Transformer model, which performed sequence-to-sequence tasks, and are now capable of performing a wide variety of language tasks, such as text summarization and machine translation.\n",
+    "Transformer models, such as GPT-3 and BERT, have revolutionalized today's NLP landscape. They have built upon the original transformer model, which performed sequence-to-sequence tasks, and are now capable of performing a wide variety of language tasks, such as text summarization and machine translation.\n",
     "\n",
-    "However, while being very capable, they come with one major drawback: they are huge. The size of models like BERT significantly limits their adoption, because they cannot be run on normal machines and require massive GPU resources to even get them running properly.\n",
+    "However, while being very capable, they come with one major drawback: their size. The size of models such as BERT significantly limits their adoption because they require massive computational resources train or even perform inference.\n",
     "\n",
+    "In attempt to lessen this problem, in 2019, researchers released [DistilBERT](https://arxiv.org/abs/1910.01108), which is a modified version of the [BERT](https://arxiv.org/abs/1810.04805) NLP model. DistilBERT applies parameter-reduction techniques in order to lower memory consumption and increase the training speed of BERT. This implies decreased GPU/TPU memory requirements and training times. Compared to the 110 million parameters of BERT-base model, the DistilBERT-base-uncased model has only 66 million parameters while using half the layers (6) the same number of hidden units (768).\n",
     "\n",
-    "In attempt to mitigate this problem, in 2019, Google Researchers released ALBERT. ALBERT stands for \"A Lite BERT\" and is a modified version of the BERT NLP model. ALBERT applies parameter-reduction techniques in order to lower memory consumption and increase the training speed of BERT. This implies decreased GPU/TPU memory requirements and training times. Compared to the 110 million parameters of BERT-base model, the ALBERT-base model has only 12 million parameters while using the same number of layers and 768 hidden units.\n",
-    "\n",
-    "HuggingFace's python transformers library provides APIs to download state-of-the-art pretrained models. Each Transformers architecture is defined in a standalone Python module so they can be easily customized for research and experiments. We will be using ALBERT from this library to perform sentiment analysis."
+    "HuggingFace's `transformers` library provides an easy way to download state-of-the-art pretrained models. For our purpose, we load DistilBERT using the \"sentiment-analysis\" pipeline provided by this library."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a830d93-87e0-4a18-9e3d-81171b510240",
+   "metadata": {},
+   "source": [
+    "## 3.1 Loading ALBERT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d55fa95-06f5-4e1d-8465-1697b6c52c8d",
+   "metadata": {},
+   "source": [
+    "In this case, we set the `TRANSFORMERS_CACHE` environment variable before importing `transformers` because we prefer the model to download to a local folder."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bdd68833-2a5a-4226-b78d-7546ab8e8ceb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4ab9009029e44d6e8aebbc16468cc433",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/629 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "91d342c5a30343aa92bc6bd03390a121",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/255M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "39df214606144ed68fce35ad862f29a9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/48.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ccdaabed7c8f430f9919755361d8a0f5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/226k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
     "os.environ['TRANSFORMERS_CACHE'] = 'transformers_cache/' \n",
     "\n",
     "import torch\n",
-    "from transformers import AlbertTokenizer, AlbertModel"
+    "\n",
+    "if torch.cuda.is_available():\n",
+    "    device = 0\n",
+    "else:\n",
+    "    device = -1\n",
+    "    print(\"PyTorch is unable to access CUDA installation.\")\n",
+    "    \n",
+    "from transformers import pipeline, AutoModelForTokenClassification, AutoTokenizer\n",
+    "\n",
+    "pipe = pipeline(task=\"sentiment-analysis\", model=\"distilbert-base-uncased-finetuned-sst-2-english\", device = device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "70ab637b-6989-4a30-b7ae-ae047364170f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'POSITIVE', 'score': 0.9998279809951782}]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_text = '''\n",
+    "\n",
+    "'''\n",
+    "pipe(raw_text)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c503c73-bb65-4025-81d2-c2ce542361f0",
+   "id": "391c818a-799a-4168-b9fe-94f0e106edd6",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "tokenizer = AlbertTokenizer.from_pretrained(\"albert-base-v2\")\n",
-    "model = AlbertModel.from_pretrained(\"albert-base-v2\")\n",
-    "\n",
-    "inputs = tokenizer(\"Hello, my dog is cute\", return_tensors=\"pt\")\n",
-    "outputs = model(**inputs)\n",
-    "\n",
-    "last_hidden_states = outputs.last_hidden_state"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a38cb03e-3651-4956-a440-04bcdaf57b75",
+   "id": "4f57b2d6-925a-422f-b25b-fdb710fea52e",
    "metadata": {},
    "outputs": [],
    "source": []
