remove redundant shite

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -10,8 +10,7 @@
    "source": [
     "<center>\n",
     "<h1>\n",
-    "Analyzing the Sentiment of Online Substance Abuse Support Groups During the\n",
-    "COVID-19 Pandemic via Natural Language Processing\n",
+    "Analyzing the Sentiment of Substance Abuse Support Groups During the COVID-19 Pandemic via Natural Language Processing\n",
     "</h1>\n",
     "<h5>\n",
     "<a href=\"https://zeyadmansour.com\">Zeyad Mansour</a> \n",
