--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -183,7 +183,7 @@
    "source": [
     "In order to use the Reddit API, an account must be granted access. After agreeing to follow the ToS, a Reddit user can apply [here](https://docs.google.com/forms/d/e/1FAIpQLSezNdDNK1-P8mspSbmtC2r86Ee9ZRbC66u929cG2GX0T9UMyw/viewform).\n",
     "\n",
-    "Account credentials must be provided in the `client_secrets.json` file so that we can authenticate with PRAW. See [ex_client_secrets.json](ex_client_secrets.json) for example format."
+    "Account credentials must be provided in the `client_secrets.json` file for authentication with PRAW. See [ex_client_secrets.json](ex_client_secrets.json) for example format."
    ]
   },
   {
