--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -408,14 +408,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a728ab5b-01b1-4978-bc94-542b90b397f7",
-   "metadata": {},
-   "source": [
-    "Now, we have the data. This can be loaded in a pandas dataframe and displayed for a visual."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 148,
    "id": "dd8e9209-5e0e-42f1-a11d-e1d26d3ad716",
@@ -761,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 152,
    "id": "4cfe1954-c885-4d81-9ad1-bdda019a56db",
    "metadata": {},
    "outputs": [],
@@ -775,12 +767,12 @@
    "id": "0286bae7-454a-41e9-92c0-47196a050421",
    "metadata": {},
    "source": [
-    "COVID-19 case data is used to deepen analysis. Refer to the [Johns Hopkins COVID-19 GitHub repository](https://github.com/CSSEGISandData/COVID-19). Retrieved data must be grouped by the total number of new cases for each month."
+    "Refer to the [Johns Hopkins COVID-19 GitHub repository](https://github.com/CSSEGISandData/COVID-19). Retrieved data must be grouped by the total number of new cases for each month."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 153,
    "id": "535eaf65-8828-44e2-91bc-1a328105fe3b",
    "metadata": {},
    "outputs": [
@@ -1673,13 +1665,9 @@
    "id": "725bffee-aea6-405f-82bc-d1c0f0e3bbdd",
    "metadata": {},
    "source": [
-    "Transformer models, such as GPT-3 and BERT, have revolutionalized today's NLP landscape. They have built upon the original transformer model, which performed sequence-to-sequence tasks, and are now capable of performing a wide variety of language tasks, such as text summarization and machine translation.\n",
-    "\n",
-    "However, while being very capable, they come with one major drawback: their size. The size of models such as BERT significantly limits their adoption because they require massive computational resources train or even perform inference.\n",
-    "\n",
+    "Transformer models, such as GPT-3 and BERT, have revolutionalized today's NLP landscape. They have built upon the original transformer model, which performed sequence-to-sequence tasks, and are now capable of performing a wide variety of language tasks, such as text summarization and machine translation. However, while being very capable, they come with one major drawback: their size. The size of models such as BERT significantly limits their adoption because they require massive computational resources train or even perform inference.\n",
     "In attempt to lessen this problem, in 2019, researchers released [DistilBERT](https://arxiv.org/abs/1910.01108), which is a modified version of the [BERT](https://arxiv.org/abs/1810.04805) NLP model. DistilBERT applies parameter-reduction techniques in order to lower memory consumption and increase the training speed of BERT. This implies decreased GPU/TPU memory requirements and training times. Compared to the 110 million parameters of BERT-base model, the DistilBERT-base-uncased model has only 66 million parameters while using half the layers (6) the same number of hidden units (768).\n",
-    "\n",
-    "HuggingFace's `transformers` library provides an easy way to download state-of-the-art pretrained models. For our purpose, we load DistilBERT using the \"sentiment-analysis\" pipeline provided by this library."
+    "HuggingFace's `transformers` library provides a way to download state-of-the-art pretrained models. For our purpose, we load DistilBERT using the \"sentiment-analysis\" pipeline provided by this library."
    ]
   },
   {
@@ -1727,7 +1715,7 @@
    "id": "d9f852fb-0d00-40b6-a70c-aa9857f9f099",
    "metadata": {},
    "source": [
-    "# TODO"
+    "# TODO gdfspoigsdfajkhlg"
    ]
   },
   {
