--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -108,11 +108,7 @@
    "id": "5c86dfd4-2c32-4dfa-9150-7a09b88aab4f",
    "metadata": {},
    "source": [
-    "<hr>\n",
-    "\n",
-    "**PRAW (the Python Reddit API Wrapper)** allows us to obtain the current details of a post. This includes the \"score,\" which is the total number of upvotes minus the total number of downvotes.\n",
-    "\n",
-    "**PSAW (the Python PushShift API Wrapper)** allows us to obtain historical posts, whereas PRAW does not have this functionality. PushShift is a third-party service that scrapes Reddit to provide \"enhanced functionality and search capabilities for searching Reddit comments and submissions.\" Their API is intended research purposes."
+    "<hr>\n"
    ]
   },
   {
@@ -177,16 +173,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ea9cefcd-7371-4d3e-9fef-6926c289d857",
-   "metadata": {},
-   "source": [
-    "In order to use the Reddit API, an account must be granted access. After agreeing to follow the ToS, a Reddit user can apply [here](https://docs.google.com/forms/d/e/1FAIpQLSezNdDNK1-P8mspSbmtC2r86Ee9ZRbC66u929cG2GX0T9UMyw/viewform).\n",
-    "\n",
-    "Account credentials must be provided in the `client_secrets.json` file for authentication with PRAW. See [ex_client_secrets.json](ex_client_secrets.json) for example format."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "9094927d-0ccf-494c-9112-6b10e3d649f0",
@@ -218,14 +204,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ea1ffc08-cf7a-45c7-b504-214a48d1a10d",
-   "metadata": {},
-   "source": [
-    "Define a list of the subreddits that for scraping and initialize the appropriate time interval variables."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "71eb3383-45bb-4723-9102-24d345a3bce0",
@@ -238,14 +216,6 @@
     "start_month = 10\n",
     "end_year = 2022\n",
     "end_month = 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "71d882b6-c7aa-4bc2-978a-41da8909944b",
-   "metadata": {},
-   "source": [
-    "The following cell contains helper functions for future steps."
    ]
   },
   {
@@ -285,16 +255,6 @@
     "            yield {\"year\":start_year, \"month\":start_month}\n",
     "            start_year += 1\n",
     "            start_month = 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d817c523-83ba-44ac-bd13-cd909148d5ae",
-   "metadata": {},
-   "source": [
-    "The goal is to permanently store the scraped data for future analysis. \n",
-    "\n",
-    "The scraping process can be lengthly due to rate limiting, and storing the data we get from the API in memory is bad practice when considering the likelihood of a crash. Therefore, for each subreddit, after each month, posts are saved via a pandas dataframe to the disk (as a .csv file)."
    ]
   },
   {
@@ -356,14 +316,6 @@
    "metadata": {},
    "source": [
     "## 1.4 Data Preprocessing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b2cc8acf-f059-4fe9-b77d-0e44bce9a8e8",
-   "metadata": {},
-   "source": [
-    "Posts that were deleted, or contain little to no data, are still part of the data. These must be removed these from the dataset."
    ]
   },
   {
@@ -1662,16 +1614,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "725bffee-aea6-405f-82bc-d1c0f0e3bbdd",
-   "metadata": {},
-   "source": [
-    "Transformer models, such as GPT-3 and BERT, have revolutionalized today's NLP landscape. They have built upon the original transformer model, which performed sequence-to-sequence tasks, and are now capable of performing a wide variety of language tasks, such as text summarization and machine translation. However, while being very capable, they come with one major drawback: their size. The size of models such as BERT significantly limits their adoption because they require massive computational resources train or even perform inference.\n",
-    "In attempt to lessen this problem, in 2019, researchers released [DistilBERT](https://arxiv.org/abs/1910.01108), which is a modified version of the [BERT](https://arxiv.org/abs/1810.04805) NLP model. DistilBERT applies parameter-reduction techniques in order to lower memory consumption and increase the training speed of BERT. This implies decreased GPU/TPU memory requirements and training times. Compared to the 110 million parameters of BERT-base model, the DistilBERT-base-uncased model has only 66 million parameters while using half the layers (6) the same number of hidden units (768).\n",
-    "HuggingFace's `transformers` library provides a way to download state-of-the-art pretrained models. For our purpose, we load DistilBERT using the \"sentiment-analysis\" pipeline provided by this library."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "7a830d93-87e0-4a18-9e3d-81171b510240",
    "metadata": {},
    "source": [
@@ -1679,22 +1621,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "8d55fa95-06f5-4e1d-8465-1697b6c52c8d",
-   "metadata": {},
-   "source": [
-    "In this case, we set the `TRANSFORMERS_CACHE` environment variable before importing `transformers` because we prefer the model to download to a local folder."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "bdd68833-2a5a-4226-b78d-7546ab8e8ceb",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
+    "#set`TRANSFORMERS_CACHE` environment variable before importing `transformers` because we prefer the model to download to local folder\n",
     "os.environ['TRANSFORMERS_CACHE'] = 'transformers_cache/' \n",
     "\n",
     "import torch\n",
