--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1612,7 +1612,7 @@
    "id": "7a830d93-87e0-4a18-9e3d-81171b510240",
    "metadata": {},
    "source": [
-    "## 3.1 Loading ALBERT"
+    "## 3.1 Loading RoBERTa"
    ]
   },
   {
